# discord-little_guy_enjoyer

./: .env  .gitignore  poetry.toml  pyproject.toml  replit.nix  requirements.txt
little_guy_bot/: bot.py  pikmin.py
little_guy_bot/resources/: __init__.py
